# sheriff-sale-python

./: .editorconfig  .env.sample  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  .pylintrc  Pipfile  Procfile  README.md  Sheriff Sale.py  TODO.md  app.py  base.py  cities.txt  cities_zip.json  city_nums.json  constants.py  database.py  database_models.py  database_old.py  gunicorn.conf.py  nj_parcel_parser.py  nj_parcels.py  nj_parcels_cities.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup.cfg  sheriff_sale.csv  sheriff_sale.html  sheriff_sale.py  tsconfig.json  utils.py  zip_cities.json
.tmp.drivedownload/: 1541441.driveupload  2671181.driveupload  4070492.driveupload  4783111.driveupload  5215812.driveupload  5757369.driveupload  5815159.driveupload  6619946.driveupload  6818903.driveupload  6917875.driveupload  7332929.driveupload  8014485.driveupload  8193162.driveupload  9352372.driveupload  9842398.driveupload
app/: __init__.py  commands.py  config.py  constants.py  models.py  routes.py  utils.py
app/data/: cities_by_county_mapping.json
app/models/: __init__.py  county_clerk_model.py  listing_model.py  (+2 more)
client/: .babelrc  .eslintrc.js  .eslintrc.json  .prettierrc  jsconfig.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
flask_app/: __init__.py  db.py  forms.py  main.bak.db  main.db  models.py  routes.py
json/: NJParcels_CityNums.json  nj_parcels_city_num.json  zip_cities.json
json_dumps/: 01_02_2019.json  01_16_2019.json  01_17_2019.json
migrations/: env.py
public/: index.html
scripts/: migrate.py
server/: .env  .gitignore  .pylintrc  Pipfile  config.py  server.py  settings.py  setup.cfg  setup.py
src/: App.jsx  App.tsx  index.css  index.js  index.tsx
templates/: home.html  layout.html
tests/: conftest.py  listing.html  listing_detail.html  test_sheriff_sale.py  test_sheriff_sale_listing.py
(+194 files in other folders)
