[tool.poetry]
authors = ["Valon Rama"]
description = ""
name = "sheriffsale"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = "2.0.0rc1"
Flask-APScheduler = "1.12.1"
Flask-Cors = "3.0.10"
Flask-Migrate = "2.7.0"
Flask-SQLAlchemy = "2.5.1"
asgiref = "3.3.4"
beautifulsoup4 = "4.9.3"
colorama = "0.4.4"
flask-googlemaps = "0.4.1"
gunicorn = "20.1.0"
psycopg2 = "2.8.6"
python = "3.8"
python-dotenv = "0.16.0"
requests = "2.25.1"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.9.0"
flake8-quotes = "3.2.0"
isort = "5.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
ensure-newline-before-comments = true
forcegrid-wrap = 0
include-trailing-comma = true
line-length = 120
multi-line-output = 3
skip-string-normalization = true
use_parentheses = true
